fix header overflow

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -80,6 +80,10 @@ h2 {
 }
 
 /* Header */
+.fixedHeaderContainer {
+  width: 100vw;
+}
+
 .fixedHeaderContainer header .headerTitleWithLogo {
   font-weight: normal;
   font-size: 36px;
